Issue IMCMS-605 Image editor - Not responsive, IMCMS-673 Improve the view of image editor, IMCMS-676 Small fixes in image editor: - Improve the view - Improve adaptability

--- a/src/main/webapp/imcms/css/image_editor/imcms-advanced-mode.css
+++ b/src/main/webapp/imcms/css/image_editor/imcms-advanced-mode.css
@@ -25,7 +25,8 @@
 
 .imcms-advanced-mode__compression{
     display: flex;
-    padding: 30px;
+    padding: 30px 30px 0 30px;
+    place-items: center;
 }
 
 .imcms-crop-coordinates .imcms-number {
