--- a/src/main/webapp/imcms/css/image_editor/imcms-editable-controls-area.css
+++ b/src/main/webapp/imcms/css/image_editor/imcms-editable-controls-area.css
@@ -1,12 +1,7 @@
 .imcms-editable-controls-area {
-    overflow: auto;
+    overflow-y: scroll;
     width: 100%;
-    height: 70%;
-    height: -webkit-calc(86% - 130px);
-    height: -moz-calc(86% - 130px);
-    height: -o-calc(86% - 130px);
-    height: calc(86% - 130px);
-    padding: 20px 42px;
+    padding: 15px 42px;
     border-left: 1px solid #d3d8de;
 }
 
@@ -88,7 +83,6 @@
 .imcms-advanced-mode__file-format {
     float: left;
     width: 40%;
-    height: 125px;
 }
 
 .imcms-advanced-mode__file-format .imcms-drop-down-list {
