--- a/src/main/webapp/imcms/css/image_editor/imcms-image_editor.css
+++ b/src/main/webapp/imcms/css/image_editor/imcms-image_editor.css
@@ -1,3 +1,25 @@
+.common-info-image {
+    width: 50%;
+    padding-left: 95px;
+    min-width: 350px;
+}
+
+.image-editor-info {
+    width: 45%;
+    margin-right: 5%;
+    display: inline-flex;
+    text-transform: lowercase;
+    justify-content: flex-end;
+}
+
+.image-editor-info__data-link{
+    max-width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+}
+
 .imcms-image_editor {
     background-color: #f3f3fc;
     display: block;
@@ -7,11 +29,6 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: auto;
-}
-
-.common-info-image {
-    width: 50%;
-    display: inline-flex;
 }
 
 .imcms-image_editor__image-characteristics {
@@ -56,7 +73,7 @@
     display: block;
     width: 100%;
     padding-top: 15px;
-    padding-left: 35px;
+    text-align: center;
 }
 
 .imcms-image_editor__footer button {
@@ -64,7 +81,9 @@
     display: inline-block;
     padding-left: 10px;
     padding-right: 10px;
+    margin: 5px;
     width: 45%;
+    max-width: 150px;
 }
 
 .image-exif-window {
@@ -73,7 +92,7 @@
 
 .image-exif-window .imcms-pop-up-modal__body {
     overflow-y: auto;
-	height: 100%;
+	height: 95%;
     background-color: #f3f3fc;
 }
 
@@ -81,22 +100,12 @@
     padding: 6px 15px;
 }
 
+.image-exif-window + .imcms-modal-layout{
+    z-index: 10003;
+}
+
 .imcms-originally-img-area__img {
     overflow: hidden;
-}
-
-@media screen and (max-width: 790px) {
-    .imcms-image_editor__image-characteristics {
-        padding: 0 20px;
-    }
-}
-
-.image-editor-info {
-    display: -webkit-inline-box;
-    text-transform: lowercase;
-    margin-left: 38%;
-    position: absolute;
-    right: 10%;
 }
 
 .imcms-image-info {
